Background + header finished

--- a/index.html
+++ b/index.html
@@ -9,6 +9,27 @@
     <script src="./main.js"></script>
 </head>
 <body>
-    
+    <header class="flex justify-center align-center">
+            <span class="blue">I</span>
+            <span class="yellow">t</span>
+            <span class="red">a</span>
+            <span class="green">l</span>
+            <span class="yellow">i</span>
+            <span class="red">a</span>
+            <span class="green m-right">n</span>
+            
+            <span class="yellow">p</span>
+            <span class="blue">l</span>
+            <span class="green">u</span>
+            <span class="blue">m</span>
+            <span class="yellow">b</span>
+            <span class="red">e</span>
+            <span class="green m-right">r</span>
+
+            <span class="yellow">g</span>
+            <span class="red">u</span>
+            <span class="green">y</span>
+    </header>
+    <main></main>
 </body>
 </html>
