Starting page done

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./style.css">
     <script src="./main.js"></script>
 </head>
-<body>
+<body class="relative">
     <header class="flex justify-center align-center">
             <span class="blue">I</span>
             <span class="yellow">t</span>
@@ -30,6 +30,10 @@
             <span class="red">u</span>
             <span class="green">y</span>
     </header>
-    <main></main>
+    <main class="flex justify-center align-center">
+        <div class=" flex justify-center align-center square">
+            <p class="start-text">START</p>
+        </div>
+    </main>
 </body>
 </html>
