"Event box almost finished"

--- a/index.html
+++ b/index.html
@@ -34,6 +34,23 @@
         <div class=" flex justify-center align-center square">
             <p class="start-text">START</p>
         </div>
+        <div class="text-square">
+            <p>Once upon a time...</p>
+            <div>
+                <button class="button-choice">Option 1</button>
+                <button class="button-choice">Option 2</button>
+                <button class="button-choice">Option 3</button>
+                <button class="button-choice">Option 4</button>
+                <div class="flex-block">
+                    <p>
+                        Inventory
+                    </p>
+                    <div class="inventory flex justify-center">
+                        <img src="./assets/SeekPng.com_goomba-png_8897639.png" height="40px" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 </html>
