--- a/index.html
+++ b/index.html
@@ -31,27 +31,29 @@
             <span class="green">y</span>
     </header>
     <main class="flex flex-column justify-center align-center">
-        <!-- <div class=" flex justify-center align-center square">
+       
+        <div id="startButton" class=" flex justify-center align-center square">
             <p class="start-text">START</p>
-        </div> -->
-        <div class="text-square">
+        </div>
+
+        <div id="storyBox" class="text-square">
             <p>Once upon a time there was a plumber from italy named... Named, wait. I forgot to take his name, wait a second. What’s your name?</p>
         </div>
 
-        <div class="text-square">
+        <div id="inputBox" class="text-square">
             <label for="myText">Please enter your name:</label>
             <input type="text" id="myText">
             <button type="button" id="myButton">Submit</button>
         </div>
         
-         <div class="text-square">
+         <div id="choicesBox" class="text-square">
             <button class="button-choice">Option 1</button>
             <button class="button-choice">Option 2</button>
             <button class="button-choice">Option 3</button>
             <button class="button-choice">Option 4</button>
         </div>    
 
-         <div class="inventory-container absolute flex flex-column align-center">
+         <div id="inventory" class="inventory-container absolute flex flex-column align-center">
              <p>Inventory</p>
              <img src="./assets/SeekPng.com_goomba-png_8897639.png" alt="Goomba">
              <img src="./assets/SeekPng.com_goomba-png_8897639.png" alt="Goomba">
