--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Textspel</title>
-    <link rel="stylesheet" href="./test-igen.css">
-    <script defer src="./test-igen.js"></script>
+    <link rel="stylesheet" href="./style.css">
+    <script defer src="./main.js"></script>
 </head>
 <body class="relative">
     <header class="flex justify-center align-center">
