--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="text-square" id="inputBox">
             <label for="text">Please enter your name:</label>
             <input type="text" name="name" id="myText"/>
-            <button id="myButton">Submit</button>
+            <button type="submit" id="myButton">Submit</button>
         </div>
         
          <div id="choicesBox" class="text-square">
