Split CSS file into three and added comments

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Textspel</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./reusable.css">
+    <link rel="stylesheet" href="./id-styling.css">
     <script defer src="./main.js"></script>
 </head>
 <body class="relative">
