--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
 
         <div id="storyBox" class="text-square">
-            Once upon a time there was a plumber from italy named... Named, wait. I forgot to take your name, wait a second. What’s your name?
+            Once upon a time there was a plumber from italy named... Named... Ehh. Wait! I forgot to take your name, wait a second. What’s your name?
         </div>
 
 
